--- a/Code/DSA/Books/AlgorithmsForInterviews/01c_searching_binary-search-trees.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/01c_searching_binary-search-trees.yml
@@ -8,18 +8,14 @@ defaults:
   - AFI-AlgorithmsForInterviews
   - AFI-01-Searching
   - AFI-01c-BinarySearchTrees
-
   fields:
     Python: "**To-do: Python.**"
     Java: "**To-do: Java.**"
     C++: "**To-do: C++.**"
-
   markdownTabLength: 4
-
 notes:
-
-
-- fields:
+- id: 1536205076401
+  fields:
     Front: |
       ## 01.16: Search BST for a key
 
@@ -28,9 +24,8 @@ notes:
       Given a BST \\(T\\), first write a recursive function that searches for key \\(K\\), then write an iterative function.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 20.
-
-
-- fields:
+- id: 1536205076460
+  fields:
     Front: |
       ## 01.17: Search BST for \\(x > k\\)
 
@@ -39,20 +34,18 @@ notes:
       Given a BST \\(T\\) and a key \\(K\\), write a method that searches for the first entry larger than \\(K\\).
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 20.
-
-
-- fields:
+- id: 1536205076555
+  fields:
     Front: |
       ## 01.18: Searching two sorted arrays
 
-      Given a sorted array \\(A\\), if you want to find the \\(k\\)-th smallest element, you can simply return \\(A[k 一 1]\\) which is an \\(O(1)\\) operation. If you are given two sorted arrays of length \\(n\\) and \\(m\\) and you need to find the \\(k\\)-th smallest element in the union of the two arrays, you could potentially merge the two sorted arrays and then look for the answer but that would take \\(O(n+m)\\) time. You can build the merged array only till the first \\(k\\) elements. This would be a \\(O(k)\\) operation. Can you do better than this?
+      Given a sorted array \\(A\\), if you want to find the \\(k\\)-th smallest element, you can simply return \\(A[k - 1]\\) which is an \\(O(1)\\) operation. If you are given two sorted arrays of length \\(n\\) and \\(m\\) and you need to find the \\(k\\)-th smallest element in the union of the two arrays, you could potentially merge the two sorted arrays and then look for the answer but that would take \\(O(n+m)\\) time. You can build the merged array only till the first \\(k\\) elements. This would be a \\(O(k)\\) operation. Can you do better than this?
 
       You are given two sorted arrays of lengths \\(m\\) and \\(n\\). Give a \\(O(\log m + \log n)\\) time algorithm for computing the \\(k\\)-th smallest element in the union of the two arrays. Keep in mind that the elements may be repeated.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 21.
-
-
-- fields:
+- id: 1536205076605
+  fields:
     Front: |
       ## 01.19: Intersecting lines
 
@@ -61,9 +54,8 @@ notes:
       How would you determine if a given set of straight lines intersect in a given rectangle or not?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 21.
-
-
-- fields:
+- id: 1536205076654
+  fields:
     Front: |
       ## 01.20: Contained intervals
 
@@ -72,18 +64,16 @@ notes:
       Write a function that takes a set of open intervales on the real line \\((a_i, b_i)\\) for \\(i \in \\{0,1,\ldots,n-1\\}\\) and determines if there exists some interval \\((a_l, b_l)\\) that is completely contained inside another interval \\((a_m, b_m)\\). If such pairs of intervals exist, then return one such pair.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 21.
-
-
-- fields:
+- id: 1536205076689
+  fields:
     Front: |
       ## 01.21: View from the top
 
       This is a simplified version of a problem that often comes up in computer graphics --- you are given a million overlapping line segments of different colors situated at different heights. Implement a function that draw the lines as seen from the top.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 21-2.
-
-
-- fields:
+- id: 1536205076726
+  fields:
     Front: |
       ## 01.22: Completion search
 
@@ -96,9 +86,8 @@ notes:
       Design an efficient algorithm for finding such a \\(\sigma\\), if one exists.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 22.
-
-
-- fields:
+- id: 1536205076787
+  fields:
     Front: |
       ## 01.23: Matrix search
 
@@ -107,9 +96,8 @@ notes:
       Design an efficient algorithm that decides whether a real number \\(x\\) appears in \\(A\\).  How many entries of \\(A\\) does your algorithm inspect in the worst-case? Can you prove a tight lower bound that any such algorithm has to consider in the worst-case?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 22.
-
-
-- fields:
+- id: 1536205076822
+  fields:
     Front: |
       ## 01.24: Checking simplicity
 
