--- a/Code/DSA/Books/AlgorithmsForInterviews/07_parallel-computing.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/07_parallel-computing.yml
@@ -7,28 +7,23 @@ defaults:
   - Books
   - AFI-AlgorithmsForInterviews
   - AFI-07-ParallelComputing
-
   fields:
     Python: "**To-do: Python.**"
     Java: "**To-do: Java.**"
     C++: "**To-do: C++.**"
     Back: "**To-do: Back.**"
-
   markdownTabLength: 4
-
-
 notes:
-
-- fields:
+- id: 1536203073226
+  fields:
     Front: |
       ## 07.01: Servlet with caching
 
       Design a servlet which implements an online spell correction suggester. Specifically, it takes as input a string \\(s\\) and computes an array of entries in its dictionary which are closest to the string using the edit distance specified in Problem 5.8. Since computing the edit distances from \\(s\\) to each entry in the dictionary is time-consuming, you should implementa a caching strategy. Specifically, cache the most recently computed result.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 63.
-
-
-- modelName: BasicMathJax
+- id: 1536203073326
+  modelName: BasicMathJax
   fields:
     Front: |
       ## 07.02: Thread pools
@@ -53,9 +48,8 @@ notes:
       Suppose you find that `SimpleWebServer` has poor performance because `ProcessReq` frequently blocks on IO. What steps could you take to improve `SimpleWebServer`'s performance?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 64.
-
-
-- fields:
+- id: 1536203073388
+  fields:
     Front: |
       ## 07.03: Asynchronous callbacks
 
@@ -68,9 +62,8 @@ notes:
       The `Execute` method may take an indeterminate amount of time to return; it may never return. You need to have a time-out mechanism for this: assume the `Requestor` objects have an `Error` method that you can invoke.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 64.
-
-
-- fields:
+- id: 1536203073437
+  fields:
     Front: |
       ## 07.04: Timer
 
@@ -82,9 +75,8 @@ notes:
       2. canceling a thread with a given name (you can ignore the request if the thread has already started).
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 64-5.
-
-
-- fields:
+- id: 1536203073488
+  fields:
     Front: |
       ## 07.05: Readers-writers with read preference
 
@@ -97,9 +89,8 @@ notes:
       Implement a synchronization mechanism for the first readers-writers problem.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 65.
-
-
-- fields:
+- id: 1536203073556
+  fields:
     Front: |
       ## 07.06: Readers-writers with write preference
 
@@ -110,9 +101,8 @@ notes:
       Implement a synchronization mechanism for the second readers-writers problem.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 65.
-
-
-- fields:
+- id: 1536203073605
+  fields:
     Front: |
       ## 07.07: Readers-writers with fairness
 
@@ -121,9 +111,8 @@ notes:
       Implement a synchronization mechanism for the third readers-writers problem. It is acceptable (indeed necessary) that in this solution, both readers and writers have to wait longer than absolutely necessary. (Readers may wait even if \\(s\\) is opened for read, and writers may wait even if no one else has a lock on \\(s\\).)
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 65-6.
-
-
-- fields:
+- id: 1536203073653
+  fields:
     Front: |
       ## 07.08: Producer-consumer queue
 
@@ -132,9 +121,8 @@ notes:
       Design a synchronization mechanism for \\(A\\) which ensures that \\(P\\) does not attempt to add a string into the array if it is full, and \\(Q\\) does not try to remove data from an empty buffer.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 66.
-
-
-- fields:
+- id: 1536203073705
+  fields:
     Front: |
       ## 07.09: Barber shop
 
@@ -143,9 +131,8 @@ notes:
       Assume there is a thread for each customer and for the barber. Model the system using semaphores and mutexes to ensure correct behavior.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 66.
-
-
-- fields:
+- id: 1536203073753
+  fields:
     Front: |
       ## 07.10: Dining philosophers
 
