--- a/Code/DSA/Books/AlgorithmsForInterviews/09a_discrete-mathematics_general.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/09a_discrete-mathematics_general.yml
@@ -8,19 +8,15 @@ defaults:
   - AFI-AlgorithmsForInterviews
   - AFI-09-DiscreteMathematics
   - AFI-09a-General
-
   fields:
     Python: "**To-do: Python.**"
     Java: "**To-do: Java.**"
     C++: "**To-do: C++.**"
     Back: "**To-do: Back.**"
-
   markdownTabLength: 4
-
-
 notes:
-
-- modelName: CodingProblems
+- id: 1536203074637
+  modelName: CodingProblems
   fields:
     Front: |
       ## 09.01: Computing the binomial coefficients
@@ -28,9 +24,8 @@ notes:
       Design an efficient algorithm for computing \\(\binom{n}{k}\\) with the property that it never overflows if \\(\binom{n}{k}\\) can be represented as an `int`; assume \\(n\\) and \\(k\\) are `int`s.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 73-4.
-
-
-- fields:
+- id: 1536203074671
+  fields:
     Front: |
       ## 09.02: Climbing stairs
 
@@ -39,9 +34,8 @@ notes:
       How many ways are there to get to the top of the staircase?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 74.
-
-
-- fields:
+- id: 1536203074691
+  fields:
     Front: |
       ## 09.03: Ramsey Theory
 
@@ -50,9 +44,8 @@ notes:
       There are six guests at a party such that any two guests either know each other or do not know each other. Prove that there is a subset of three guests who either all know each other, or all do not know each other.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 74.
-
-
-- fields:
+- id: 1536203074726
+  fields:
     Front: |
       ## 09.04: 500 doors
 
@@ -61,9 +54,8 @@ notes:
       How many doors will be open at the end after the 500-th person has passed through the doors?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 74.
-
-
-- fields:
+- id: 1536203074787
+  fields:
     Front: |
       ## 09.05: Height determination
 
@@ -72,9 +64,8 @@ notes:
       Given \\(K\\) balls and \\(N\\) floors, what is the minimum number of ball drops that are required to determine \\(X\\) in the worst case?
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 74-5.
-
-
-- modelName: CodingProblems
+- id: 1536203074839
+  modelName: CodingProblems
   fields:
     Front: |
       ## 09.06: Betting on card colors
