--- a/Code/DSA/Books/AlgorithmsForInterviews/11k_programming_systems.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/11k_programming_systems.yml
@@ -8,47 +8,39 @@ defaults:
   - AFI-AlgorithmsForInterviews
   - AFI-11-Programming
   - AFI-11k-Systems
-
   fields:
     Python: "**To-do: Python.**"
     Java: "**To-do: Java.**"
     C++: "**To-do: C++.**"
     Back: "**To-do: Back.**"
-
   markdownTabLength: 4
-
-
 notes:
-
-
-- fields:
+- id: 1536203079891
+  fields:
     Front: |
       ## 11.17.01: Systems
 
       Describe how an operating system is implemented. Specifically, describe how Linux implements processes and I/O.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 98.
-
-
-- fields:
+- id: 1536203079923
+  fields:
     Front: |
       ## 11.17.02: Systems
 
       How does a web browser work? Specifically, describe how autocompletion (such as in a search-engine query box) is implemented.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 98.
-
-
-- fields:
+- id: 1536203079955
+  fields:
     Front: |
       ## 11.17.03: Systems
 
       How does the Internet work? Specifically, describe the roles of the TCP/IP protocol, routers, and DNS.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 98.
-
-
-- fields:
+- id: 1536203079990
+  fields:
     Front: |
       ## 11.17.04: Systems
 
